--- a/style.css
+++ b/style.css
@@ -6,10 +6,11 @@
 
 .content-div {
     background-color:rgba(255, 255, 255, 0.91);
-    height: 460px;
+    max-height: 600px;
     border-radius: 6px;
     font-family: 'Maven Pro', sans-serif;
     color: #607D8B;
+    padding: 20px;
 }
 
 .content-div h1 {
@@ -21,6 +22,12 @@
 .content-div h3 {
     font-size: 22px;
     text-align: center;
+}
+
+.content-div h4 {
+    font-size: 20px;
+    text-align: center;
+    color: #CE9463;
 }
 
 .company-name {
