--- a/style.css
+++ b/style.css
@@ -27,7 +27,8 @@
 .content-div h4 {
     font-size: 20px;
     text-align: center;
-    color: #CE9463;
+    color: #B98458;
+    font-weight:400; 
 }
 
 .company-name {
